--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
-    <title>Document</title>
-</head>
-<body>
-    
+{% extends "basic_layout.njk" %}
+{% block content %}
 <header class="show-border">
     <h5 class="text-secondary">EXHIBINECTION</h5>
     <ul class="show-border">
@@ -23,7 +14,5 @@
 
 </footer>
 
+{% endblock %}
 
-    <script src="js/all.js"></script>
-</body>
-</html>
