Add responsive nav bar

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -26,18 +26,40 @@
             </div>
         </div>
     </div>
-    <div class="nav py-3  d-flex justify-content-center border-bottom border-text-basic">
-        <ul class="d-flex">
-            <li><a href="#" class="text-text-basic px-4 mx-3">音樂</a></li>
-            <li><a href="#" class="text-text-basic px-4 mx-3">戲劇</a></li>
-            <li><a href="#" class="text-text-basic px-4 mx-3">設計</a></li>
-            <li><a href="#" class="text-text-basic px-4 mx-3">藝術</a></li>
-            <li><a href="#" class="text-text-basic px-4 mx-3">美食</a></li>
-            <li><a href="#" class="text-text-basic px-4 mx-3">旅遊</a></li>
-            <li><a href="#" class="text-text-basic px-4 mx-3">電影</a></li>
-            <li><a href="#" class="text-text-basic px-4 mx-3">親子</a></li>
-            <li><a href="#" class="text-text-basic px-4 mx-3">期間限定</a></li>
-        </ul>
+    <div class="nav py-3 border-bottom border-text-basic d-none d-sm-block">
+            <ul class="d-flex justify-content-center">
+                <li><a href="#" class="text-text-basic px-4 mx-3">音樂</a></li>
+                <li><a href="#" class="text-text-basic px-4 mx-3">戲劇</a></li>
+                <li><a href="#" class="text-text-basic px-4 mx-3">設計</a></li>
+                <li><a href="#" class="text-text-basic px-4 mx-3">藝術</a></li>
+                <li><a href="#" class="text-text-basic px-4 mx-3">美食</a></li>
+                <li><a href="#" class="text-text-basic px-4 mx-3">旅遊</a></li>
+                <li><a href="#" class="text-text-basic px-4 mx-3">電影</a></li>
+                <li><a href="#" class="text-text-basic px-4 mx-3">親子</a></li>
+                <li><a href="#" class="text-text-basic px-4 mx-3">期間限定</a></li>
+            </ul>
+    </div>
+    <div class="nav-swiper d-block d-sm-none py-4 border-bottom border-text-basic ">
+        <div class="swiper-container swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <a href="#" class="text-text-basic px-4 mx-3">音樂</a>
+                    <a href="#" class="text-text-basic px-4 mx-3">戲劇</a>
+                    <a href="#" class="text-text-basic px-4 mx-3">設計</a>
+                    <a href="#" class="text-text-basic px-4 mx-3">藝術</a>
+                </div>
+                <div class="swiper-slide">
+                    <a href="#" class="text-text-basic px-4 mx-3">美食</a>
+                    <a href="#" class="text-text-basic px-4 mx-3">旅遊</a>
+                    <a href="#" class="text-text-basic px-4 mx-3">電影</a>
+                    <a href="#" class="text-text-basic px-4 mx-3">親子</a>
+                </div>
+                <div class="swiper-slide d-flex justify-content-start">
+                    <a href="#" class="text-text-basic px-4 mx-3">期間限定</a>
+                </div>
+                
+            </div>
+        </div>
     </div>
 
 </main>
