--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -1,16 +1,6 @@
 {% extends "basic_layout.njk" %}
 {% block content %}
-<header class="border-bottom border-text-basic">
-    <div class="container container-xxl d-flex justify-content-center position-relative">
-        <h1 class="fs-5 text-secondary">EXHIBINECTION</h1>
-        <ul class="d-flex position-absolute end-0">
-            <li><a href="#" class="lh-base align-items-end text-text-basic me-8 d-none d-lg-block">Sign in</a></li>
-            <li><a href="#" class="lh-base align-items-end text-text-basic me-8 d-none d-lg-block">Sign up</a></li>
-            <li class="me-4 me-sm-2"><a href="#"><span class="hamberger"></span></a></li>
-        </ul>
-    </div>
-
-</header>
+{% include  "partials/header.njk"%}
 <main>
     <div class="jumbotron position-relative">
         <div class="container container-xxl">
@@ -26,46 +16,10 @@
             </div>
         </div>
     </div>
-    <div class="nav py-3 border-bottom border-text-basic d-none d-sm-block">
-            <ul class="d-flex justify-content-center">
-                <li><a href="#" class="text-text-basic px-4 mx-3">音樂</a></li>
-                <li><a href="#" class="text-text-basic px-4 mx-3">戲劇</a></li>
-                <li><a href="#" class="text-text-basic px-4 mx-3">設計</a></li>
-                <li><a href="#" class="text-text-basic px-4 mx-3">藝術</a></li>
-                <li><a href="#" class="text-text-basic px-4 mx-3">美食</a></li>
-                <li><a href="#" class="text-text-basic px-4 mx-3">旅遊</a></li>
-                <li><a href="#" class="text-text-basic px-4 mx-3">電影</a></li>
-                <li><a href="#" class="text-text-basic px-4 mx-3">親子</a></li>
-                <li><a href="#" class="text-text-basic px-4 mx-3">期間限定</a></li>
-            </ul>
-    </div>
-    <div class="nav-swiper d-block d-sm-none py-4 border-bottom border-text-basic ">
-        <div class="swiper-container swiper">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <a href="#" class="text-text-basic px-4 mx-3">音樂</a>
-                    <a href="#" class="text-text-basic px-4 mx-3">戲劇</a>
-                    <a href="#" class="text-text-basic px-4 mx-3">設計</a>
-                    <a href="#" class="text-text-basic px-4 mx-3">藝術</a>
-                </div>
-                <div class="swiper-slide">
-                    <a href="#" class="text-text-basic px-4 mx-3">美食</a>
-                    <a href="#" class="text-text-basic px-4 mx-3">旅遊</a>
-                    <a href="#" class="text-text-basic px-4 mx-3">電影</a>
-                    <a href="#" class="text-text-basic px-4 mx-3">親子</a>
-                </div>
-                <div class="swiper-slide d-flex justify-content-start">
-                    <a href="#" class="text-text-basic px-4 mx-3">期間限定</a>
-                </div>
-                
-            </div>
-        </div>
-    </div>
+    {% include  "partials/nav.njk"%}
 
 </main>
-<footer>
-
-</footer>
+{% include  "partials/footer.njk"%}
 
 {% endblock %}
 
