Add responsive page of design

--- a/app/assets/pages/design.html
+++ b/app/assets/pages/design.html
@@ -2,25 +2,56 @@
 {% block content %}
 {% include  "partials/header.njk"%}
 <main>
-    {% include  "partials/nav.njk"%}
-   
-          
-     <!-- streams-review start -->
-    <div class="streams-review mt-md-12 ">
+    {% include  "partials/nav2.njk"%}
+    <!-- streams-review start -->
+    <div class="exhibition-card bg-secondary">
         <div class="container containe-lg">
-            <h1 class="fs-3 fw-bold">直播回顧</h1>
-            <div class="streams-review-container mt-md-6">
-               <div class="row">
-                   <div class="col-md-5 profolio">
-                     <h4 class="fs-4 fw-bold text-white">開幕對談 | 藝術展演巡禮</h4>
-                     <img src="{{image_directory}}head/people.png" alt="大神" class="img img-head mt-8">
-                     <p class="fs-6 lh-base fw-bolder text-white mt-3">臺北現代聯合總監｜Ken Hsu</p>
-                     <p class="fs-6 lh-base text-white mt-2">獨家由藝術家、策展人、畫廊總監帶您欣賞台北藝術特展，感受雕塑、展演及當代日常文化之間微妙的關係。
-                     </p>
-                     <button class="btn btn-short btn-warning mt-4">點此觀看</button>
-                   </div>
-               </div>
-
+            <div class="row flex-column flex-column-reverse flex-md-row">
+                    <div class="col-md-4 pt-md-13 pb-md-12 ">
+                        <p class="d-block d-md-none mb-2 text-white">01 JUN — 31 OCT</p>
+                        <h2 class="fs-2 text-white mb-2 mb-md-6">2020 台味設計展</h2>
+                        <p class="text-white mb-10 mb-md-0">一年一度的台味設計展由經濟部工業局主辦、台灣創意設計中心執行，每年，針對在地生活、文化及產業發展特    色，運用設計思考詮釋新時代的意涵，並以展覽呈現在地設計。</p>
+                    </div>
+                    <div class="col-md-5 mt-10 mt-md-13 mb-4 mb-md-12">
+                        <img src="{{image_directory}}exhibitions/alina-grubnyak-R84Oy89aNKs-unsplash.jpg" class="img-fit" alt="撿   錢">
+                    </div>
+                    <div class="col-md-1 text-white pt-md-13 pb-md-12 d-flex align-items-end">
+                        <sapn class="d-none d-md-block lh-base  fw-bold">01<br>JUN<br> | <br>31<br> OCT<br></sapn>
+                    </div>
+            </div>
+        </div>
+    </div>
+    <div class="exhibition-card bg-white">
+        <div class="container containe-lg">
+            <div class="row flex-column flex-column-reverse flex-md-row">
+                <div class="col-md-4  offset-md-2 pt-md-13 pb-md-12">
+                    <p class="d-block d-md-none mb-2 text-secondary">01 JUN — 31 OCT</p>
+                    <h2 class="fs-2 text-secondary mb-2 mb-md-6">No.22 線上設計展 </h2>
+                    <p class="text-secondary mb-10 mb-md-0">這是一個專屬於設計系畢業生的展覽，沒有華麗的名號、沒有浮誇的獎賞。讓我們用作品與理念，去碰撞真實世界裡的各種問題，創造更多美好的人事物。讓這個地球、這個世界變成每一個人心目中的理想鄉。</p>
+                </div>
+                <div class="col-md-5 mt-10 mt-md-13 mb-4 mb-md-12">
+                    <img src="{{image_directory}}exhibitions/alina-grubnyak-R84Oy89aNKs-unsplash.jpg" class="img-fit" alt="撿錢">
+                </div>
+                <div class="col-md-1 text-secondary pt-md-13 pb-md-12 d-flex align-items-end">
+                    <sapn class="d-none d-md-block lh-base fw-bold">01<br>JUN<br> | <br>31<br> OCT<br></sapn>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="exhibition-card bg-secondary">
+        <div class="container containe-lg">
+            <div class="row flex-column flex-column-reverse flex-md-row">
+                <div class="col-md-4 pt-md-13 pb-md-12">
+                    <p class="d-block d-md-none mb-2 text-white">01 JUN — 31 OCT</p>
+                    <h2 class="fs-2 text-white mb-2 mb-md-6">高雄設計節</h2>
+                    <p class="text-white mb-10 mb-md-0">設計大高雄究竟是怎麼一回事？在這「設計」詞彙有點氾濫的年代，或許我們也搞不清楚究竟誰被誰設計了，設計生活？還是被生活設計？而當高雄這座城市建設硬體已相當程度完備時，文化軟實力又該如何輸出？</p>
+                </div>
+                <div class="col-md-5 mt-10 mt-md-13 mb-4 mb-md-12">
+                    <img src="{{image_directory}}exhibitions/moralis-tsai-8xsktFRw28I-unsplash.jpg" class="img-fit"  alt="毛毛蟲">
+                </div>
+                <div class="col-md-1 text-white pt-md-13 pb-md-12 d-flex align-items-end">
+                    <sapn class="d-none d-md-block lh-base  fw-bold">01<br>JUN<br> | <br>31<br> OCT<br></sapn>
+                </div>
             </div>
         </div>
     </div>
