--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -25,7 +25,7 @@
                                 </div>
                             </div>
                             <div class="card-date">
-                                <div class="card-date-text">
+                                <div class="card-date-text fw-bold">
                                     <p>01 <br>JUN<br> | <br>31<br> OCT</p>
                                 </div>    
                                 <div class="card-links">
@@ -55,7 +55,7 @@
                                 </div>
                             </div>
                             <div class="card-date">
-                                <div class="card-date-text">
+                                <div class="card-date-text fw-bold">
                                     <p>01 <br>JUN<br> | <br>31<br> OCT</p>
                                 </div>    
                                 <div class="card-links">
@@ -85,7 +85,7 @@
                                 </div>
                             </div>
                             <div class="card-date">
-                                <div class="card-date-text">
+                                <div class="card-date-text fw-bold">
                                     <p>01 <br>JUN<br> | <br>31<br> OCT</p>
                                 </div>    
                                 <div class="card-links">
