Add reponsive top page.

--- a/app/assets/pages/design.html
+++ b/app/assets/pages/design.html
@@ -1,6 +1,6 @@
 {% extends "basic_layout.njk" %}
 {% block content %}
-{% include  "partials/header.njk"%}
+{% include  "partials/head.njk"%}
 <main>
     {% include  "partials/nav2.njk"%}
     <!-- streams-review start -->
