--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -1,109 +1,143 @@
 {% extends "basic_layout.njk" %}
 {% block content %}
-{% include  "partials/header.njk"%}
+{% include  "partials/head.njk"%}
 <main>
     {% include  "partials/jumbotron.njk"%}
     {% include  "partials/nav.njk"%}
-    <div class="hot-exhibition">
+    <div class="hot-exhibition py-5 py-md-14">
         <div class="container container-lg">
-            <h1 class="mt-md-12 fs-3 fw-bold">熱門特展</h1>
-            <!-- card 1 start -->
-            <div class="card card-horizontal mt-md-6" style="max-width:100%;">
-                <div class="row g-0">
-                    <div class="col-md-3">
-                        <img class="img-md" src="{{image_directory}}exhibitions/alina-grubnyak-R84Oy89aNKs-unsplash.jpg"    alt="邊緣人">
-                    </div>
-                    <div class="col-md-9">
-                        <div class="card-body card-horizontal-body">
-                            <div class="card-content">
-                                <h5 class="card-title">2020 台味設計展</h5>
-                                <p class="card-value">$350</p>
-                                <p class="card-text col-md-10">一年一度的台味設計展由經濟部工業局主辦、台灣創意設計中心執行，每年，針對 在地生活、文化及產業發展特色，運用設計思考詮釋新時代的意涵，並以展覽呈現在地設計。</p>
-                                <div class="card-buttons">
-                                    <button class="btn btn-horizontal-card btn-secondary">購買票券</button>
-                                    <button class="btn btn-horizontal-card btn-transparent-secondary">收藏展覽</button>
-                                </div>
-                            </div>
-                            <div class="card-date">
-                                <div class="card-date-text fw-bold">
-                                    <p>01 <br>JUN<br> | <br>31<br> OCT</p>
-                                </div>    
-                                <div class="card-links">
-                                    <a class="icon facebook-icon"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- card 1 end -->
-            <!-- card 2 start -->
-            <div class="card card-horizontal mt-md-6" style="max-width:100%;">
-                <div class="row g-0">
-                    <div class="col-md-3">
-                        <img class="img-md" src="{{image_directory}}exhibitions/michel-catalisano--a0D9LpcKV8-unsplash.jpg"     alt="綠光罩頂">
-                    </div>
-                    <div class="col-md-9">
-                        <div class="card-body card-horizontal-body">
-                            <div class="card-content">
-                                <h5 class="card-title">No.22 線上設計展</h5>
-                                <p class="card-value">$350</p>
-                                <p class="card-horizontal-text col-md-10">這是一個專屬於設計系畢業生的展覽，沒有華麗的名號、沒有浮誇的  獎賞。讓我們用作品與理念，去碰撞真實世界裡的各種問題，創造更多美好的人事物。讓這個地球、這個世界變成每一個人心    目中的理想鄉。</p>
-                                <div class="card-buttons">
-                                    <button class="btn btn-horizontal-card btn-secondary">購買票券</button>
-                                    <button class="btn btn-horizontal-card btn-transparent-secondary">收藏展覽</button>
-                                </div>
-                            </div>
-                            <div class="card-date">
-                                <div class="card-date-text fw-bold">
-                                    <p>01 <br>JUN<br> | <br>31<br> OCT</p>
-                                </div>    
-                                <div class="card-links">
-                                    <a class="icon facebook-icon"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- card 2 end -->
-            <!-- card 3 start -->
-            <div class="card card-horizontal mt-md-6" style="max-width:100%;">
-                <div class="row g-0">
-                    <div class="col-md-3">
-                        <img class="img-md" src="{{image_directory}}exhibitions/moralis-tsai-8xsktFRw28I-unsplash.jpg" alt="    毛毛蟲">
-                    </div>
-                    <div class="col-md-9">
-                        <div class="card-body card-horizontal-body">
-                            <div class="card-content">
-                                <h5 class="card-title">高雄設計節</h5>
-                                <p class="card-value">$350</p>
-                                <p class="card-horizontal-text col-md-10">設計大高雄究竟是怎麼一回事？在這「設計」詞彙有點氾濫的年代，  或許我們也搞不清楚究竟誰被誰設計了，設計生活？還是被生活設計？而當高雄這座城市建設硬體已相當程度完備時，文化軟    實力又該如何輸出？</p>
-                                <div class="card-buttons">
-                                    <button class="btn btn-horizontal-card btn-secondary">購買票券</button>
-                                    <button class="btn btn-horizontal-card btn-transparent-secondary">收藏展覽</button>
-                                </div>
-                            </div>
-                            <div class="card-date">
-                                <div class="card-date-text fw-bold">
-                                    <p>01 <br>JUN<br> | <br>31<br> OCT</p>
-                                </div>    
-                                <div class="card-links">
-                                    <a class="icon facebook-icon"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- card3 end -->
+            <!-- <h1 class="mt-2 mt-md-12 mb-2 mb-md-6 fs-3 fw-bold">熱門特展</h1> -->
+            <h1 class="big-title">熱門特展</h1>
         </div>
+            <!-- card 1 start -->
+        <div class="container container-sm-full ">
+            <div class="card card-horizontal mb-4 mt-md-6" style="max-width:100%;">
+                <div class="row g-0">
+                    <div class="col-sm-6 col-md-5 col-lg-3 mb-2 mb-lg-0">
+                        <img class="img-md" src="{{image_directory}}exhibitions/alina-grubnyak-R84Oy89aNKs-unsplash.jpg"  alt="邊緣人">
+                    </div>
+                    <div class="col-sm-6 col-md-7 col-lg-9">
+                        <div class="card-body card-horizontal-body">
+                            <div class="card-content">
+                                <div class="d-flex align-items-center justify-content-between">
+                                    <div class="d-flex">
+                                        <h5 class="card-title d-flex">2020 台味設計展 </h5>
+                                        <a class="d-inline-block d-md-none facebook-icon"> {% include "facebook-24px.svg"%}</a>
+                                    </div>
+                                    <p class="fs-8 d-md-none">01 JUN — 31 OCT</p>
+                                </div>
+                                <p class="card-value">$350</p>
+                                <p class="card-horizontal-text col-md-10 mb-5 mb-lg-0">一年一度的台味設計展由經濟部工業局主辦、台灣創意設計中心執行，每年，針對在地生活、文化及產業發展特色，運用設計思考詮釋新時代的意涵，並以展覽呈現在地設計。</p>
+                                <div class="card-buttons">
+                                    <button class="btn btn-horizontal-card btn-secondary">購買票券</button>
+                                    <button class="btn btn-horizontal-card btn-transparent-secondary">收藏展覽</button>
+                                </div>
+                            </div>
+                            <div class="card-date d-none d-md-block">
+                                <div class="card-date-text fw-bold">
+                                    <p>01 <br>JUN<br> | <br>31<br> OCT</p>
+                                </div>    
+                                <div class="card-links">
+                                    <a class="icon facebook-icon">
+                                        {% include  "facebook-24px.svg"%}
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- card 1 end -->
+        <!-- card 2 start -->
+        <div class="container container-sm-full ">
+            <div class="card card-horizontal mb-4 mt-md-6" style="max-width:100%;">
+                <div class="row g-0">
+                    <div class="col-sm-6 col-md-5 col-lg-3 mb-2 mb-lg-0">
+                        <img class="img-md" src="{{image_directory}}exhibitions/michel-catalisano--a0D9LpcKV8-unsplash.jpg"  alt="綠光罩頂">
+                    </div>
+                    <div class="col-sm-6 col-md-7 col-lg-9">
+                        <div class="card-body card-horizontal-body">
+                            <div class="card-content">
+                                <div class="d-flex align-items-center justify-content-between">
+                                    <div class="d-flex">
+                                        <h5 class="card-title d-flex">No.22 線上設計展</h5>
+                                        <a class="d-inline-block d-md-none facebook-icon"> {% include "facebook-24px.svg"%}</a>
+                                    </div>
+                                    <p class="fs-8 d-md-none">01 JUN — 31 OCT</p>
+                                </div>
+                                <p class="card-value">$350</p>
+                                <p class="card-horizontal-text col-md-10 mb-5 mb-lg-0">這是一個專屬於設計系畢業生的展覽，沒有華麗的名號、沒有浮誇的  獎賞。讓我們用作品與理念，去碰撞真實世界裡的各種問題，創造更多美好的人事物。讓這個地球、這個世界變成每一個人心    目中的理想鄉。</p>
+                                <div class="card-buttons">
+                                    <button class="btn btn-horizontal-card btn-secondary">購買票券</button>
+                                    <button class="btn btn-horizontal-card btn-transparent-secondary">收藏展覽</button>
+                                </div>
+                            </div>
+                            <div class="card-date d-none d-md-block">
+                                <div class="card-date-text fw-bold">
+                                    <p>01 <br>JUN<br> | <br>31<br> OCT</p>
+                                </div>    
+                                <div class="card-links">
+                                    <a class="icon facebook-icon">
+                                        {% include  "facebook-24px.svg"%}
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- card 2 end -->
+        <!-- card 3 start -->
+        <div class="container container-sm-full ">
+            <div class="card card-horizontal mb-4 mt-md-6" style="max-width:100%;">
+                <div class="row g-0">
+                    <div class="col-sm-6 col-md-5 col-lg-3 mb-2 mb-lg-0">
+                        <img class="img-md" src="{{image_directory}}exhibitions/moralis-tsai-8xsktFRw28I-unsplash.jpg"  alt="毛毛蟲">
+                    </div>
+                    <div class="col-sm-6 col-md-7 col-lg-9">
+                        <div class="card-body card-horizontal-body">
+                            <div class="card-content">
+                                <div class="d-flex align-items-center justify-content-between">
+                                    <div class="d-flex">
+                                        <h5 class="card-title d-flex">高雄設計節</h5>
+                                        <a class="d-inline-block d-md-none facebook-icon"> {% include "facebook-24px.svg"%}</a>
+                                    </div>
+                                    <p class="fs-8 d-md-none">01 JUN — 31 OCT</p>
+                                </div>
+                                <p class="card-value">$350</p>
+                                <p class="card-horizontal-text col-md-10 mb-5 mb-lg-0">
+                                    設計大高雄究竟是怎麼一回事？在這「設計」詞彙有點氾濫的年代，或許我們也搞不清楚究竟誰被誰設計了，設計生活？還是被生活設計？而當高雄這座城市建設硬體已相當程度完備時，文化軟實力又該如何輸出？
+                                </p>
+                                <div class="card-buttons">
+                                    <button class="btn btn-horizontal-card btn-secondary">購買票券</button>
+                                    <button class="btn btn-horizontal-card btn-transparent-secondary">收藏展覽</button>
+                                </div>
+                            </div>
+                            <div class="card-date d-none d-md-block">
+                                <div class="card-date-text fw-bold">
+                                    <p>01 <br>JUN<br> | <br>31<br> OCT</p>
+                                </div>    
+                                <div class="card-links">
+                                    <a class="icon facebook-icon">
+                                        {% include  "facebook-24px.svg"%}
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- card3 end -->
     </div>
     <!-- exhibitions end -->
      <!-- streams-review start -->
-    <div class="streams-review mt-md-12 ">
+    <div class="streams-review">
         <div class="container containe-lg">
-            <h1 class="fs-3 fw-bold">直播回顧</h1>
+            <!-- <h1 class="fs-3 fw-bold">直播回顧</h1> -->
+            <h1 class="big-title">直播回顧</h1>
             <div class="streams-review-container mt-md-6">
                <div class="row">
                    <div class="col-md-5 profolio">
